# demo-app

./: .gitignore  LICENSE  README.md  demo.sh  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agent/: __init__.py  editorial_agent.py
app/pipeline/: __init__.py  classifier.py  embedder.py  local_llm.py  remote_llm.py
app/static/: index.html
tests/: conftest.py  test_api.py  test_pipeline.py
