[project]
name = "wildedge-demo-app"
version = "0.1.0"
description = "WildEdge demo: multi-model article pipeline with traditional ML, local LLM, and remote LLM"
requires-python = ">=3.10"
dependencies = [
    "wildedge-sdk",
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "onnxruntime",
    "transformers",
    "llama-cpp-python",
    "huggingface_hub",
    "numpy",
]

# Optional: If you want to use the editable install feature of uv, you can uncomment 
# the following lines and adjust the path to your local wildedge-python repository.
# [tool.uv.sources]
# wildedge-sdk = { path = "../wildedge-python", editable = true }

[dependency-groups]
dev = ["ruff", "pytest"]

[tool.pytest.ini_options]
markers = ["slow: requires large model download, skipped by default"]
addopts = "-m 'not slow'"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
